--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Beijing, China"
   employer         : "Tsinghua University"
   uri              : # URL
-  email            : "yhliu918@gmail.com / liuyihao21@mails.tsinghua.edu.cn" 
+  email            : "liuyihao21@mails.tsinghua.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
@@ -41,7 +41,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "https://github.com/yhliu918"
+  github           : "yhliu918"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
