--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "yhliu918/yhliu918.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "sanfran.png"
+  avatar           : "venice.png"
   name             : "Yihao Liu"
   pronouns         : "She/her"
   bio              : "3rd-year PHD @ IIIS"
