fix problems in cv

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "venice.jpg"
   name             : "Yihao Liu"
   pronouns         : "She/her"
-  bio              : "3rd-year PHD @ IIIS"
+  bio              : "5th-year PHD @ IIIS"
   location         : "Beijing, China"
   employer         : "Tsinghua University"
   uri              : # URL
