--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Beijing, China"
   employer         : "Tsinghua University"
   uri              : # URL
-  email            : "liuyihao21@mails.tsinghua.edu.cn" 
+  email            : "yhliu918@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
