update paper status and picture

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "yhliu918/yhliu918.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "venice.jpg"
+  avatar           : "vienna.jpg"
   name             : "Yihao Liu"
   pronouns         : "She/her"
   bio              : "5th-year PHD @ IIIS"
